# legacy-project

./: .gitignore  LICENSE  README.md  how_to_contribute.md
code/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
code/docs/: COMPAT_PROXY_GWD.md  INVENTAIRE_ROUTES_GWD.md  PLAN_MIGRATION_COMPLET.md  PRESENTATION_ORAL.md  TUTO_TEST_ROUTES_GWD.md  TUTO_TEST_ROUTES_GWD_2.md  TUTO_TEST_ROUTES_GWD_3.md
code/scripts/: test_gwd_routes.py
code/src/geneweb/adapters/cli/: main.py
code/src/geneweb/adapters/http/: app.py
code/src/geneweb/adapters/ocaml_bridge/: bridge.py
code/src/geneweb/domain/: models.py
code/src/geneweb/io/: gedcom.py  gwb.py
code/src/geneweb/services/: comparator.py  connectivity.py  consanguinity.py  ged2gwb.py  gwb2ged.py  gwd_images.py  gwd_modify.py  gwd_routes.py  gwd_wiznotes.py
code/tests/: test_analytical_services_characterization.py  test_analytical_services_feature_flag.py  test_cli_feature_flag.py  test_comparator.py  test_connectivity_service.py  test_consanguinity_service.py  test_domain_models.py  test_ged2gwb_feature_flag.py  test_ged2gwb_service.py  test_gedcom_minimal.py  test_gedcom_parser.py  test_gwb2ged_service.py  test_gwb_comparator.py  test_gwb_minimal.py  test_gwb_write.py  test_gwd_compat.py  test_gwd_images_utils.py  test_gwd_modify.py  test_gwd_modify_family.py  test_gwd_routes.py  test_gwd_wiznotes.py  test_smoke_parity.py  test_unicode_normalization.py
code/tests/fixtures/analytical/: README.md
code/tests/fixtures/gwb/: README.md
code/tools/: make_fixtures.sh
(+2 files in other folders)
