[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "geneweb"
version = "0.1.0"
description = "Refonte Python modulaire de GeneWeb (adapters, services, io)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "Valentin", email = "" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "typer>=0.12",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "hypothesis>=6.112",
  "mypy>=1.11",
  "ruff>=0.5",
  "pre-commit>=3.7",
]

[project.scripts]
geneweb = "geneweb.adapters.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/geneweb"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PLE","PLR"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "smoke: tests rapides de fumée/parité",
]
pythonpath = ["src"]
